fixed grammar and typo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="assets/img/logohome.png" alt="My pfp">
     <p>Putra Iskandar</p>
   </a>
-  <p class="device-notification--message">Hi! This is my official website. (Open "Desktop Mode" if you use android.)</p>
+  <p class="device-notification--message">Hi! This is my official website. (Open "Desktop Mode" if you use see this.)</p>
 </div>
 
 <div class="perspective effect-rotate-left">
@@ -61,7 +61,7 @@
               <div class="intro--options">
                 <a href="https://ms.wikipedia.org/wiki/Sekolah_Kebangsaan_Tasik_Puteri_2">
                   <h3>Sekolah Kebangsaan Sungai Danga (SKTP2)</h3>
-                  <p>This is my primary school but migrate SKSD. (2016 - 2017)</p>
+                  <p>This is my primary school but migrate to SKSD. (2016 - 2017)</p>
                 </a>
                 <a href="https://ms.wikipedia.org/wiki/Sekolah_Kebangsaan_Sungai_Danga">
                   <h3>Sekolah Kebangsaan Sungai Danga (SKSD)</h3>
@@ -80,7 +80,7 @@
           </li>
           <li class="l-section section">
             <div class="work">
-              <h2>Find Me</h2>
+              <h2>Find Me On</h2>
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
