fix more shid stuff

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="assets/img/logohome.png" alt="My pfp">
     <p>Putra Iskandar</p>
   </a>
-  <p class="device-notification--message">Hi! This is my official website. (Open "Desktop Mode" if you use see this.)</p>
+  <p class="device-notification--message">(Open "Desktop Mode" if you see this.)</p>
 </div>
 
 <div class="perspective effect-rotate-left">
@@ -47,7 +47,7 @@
           <li class="l-section section section--is-active">
             <div class="intro">
               <div class="intro--banner">
-                <h1>Welcome<br>To My<br>Portfolio</h1>
+                <h1>Welcome<br>To My<br>Bio</h1>
                 <button class="cta">Contact
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -86,7 +86,7 @@
                   <li class="slider--item slider--item-left">
                     <a href="https://t.me/piskndar">
                       <div class="slider--item-image">
-                        <img src="assets/img/findme.png" alt="My pfp">
+                        <img src="assets/img/telegram.png" alt="My pfp">
                       </div>
                       <p class="slider--item-title">Telegram</p>
                       <p class="slider--item-description">Mostly, I active on Telegram than Whatsapp and etc.</p>
@@ -98,7 +98,7 @@
                         <img src="assets/img/github.png" alt="Github">
                       </div>
                       <p class="slider--item-title">Github</p>
-                      <p class="slider--item-description">Did you want to see my code stuff?.</p>
+                      <p class="slider--item-description">Do you interest to see my code stuff?</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
@@ -108,6 +108,15 @@
                       </div>
                       <p class="slider--item-title">BeatLeader</p>
                       <p class="slider--item-description">Im happy if you see my replay of Beat Saber :).</p>
+                    </a>
+                  </li>
+                  <li class="slider--item slider--item-center">
+                    <a href="https://www.instagram.com/piskndarial">
+                      <div class="slider--item-image">
+                        <img src="assets/img/instagram.png" alt="Instagram">
+                      </div>
+                      <p class="slider--item-title">Instagram</p>
+                      <p class="slider--item-description">You want to chat me directly ya?</p>
                     </a>
                   </li>
                 </ul>
@@ -179,7 +188,7 @@
           </li>
           <li class="l-section section">
             <div class="ask">
-              <h2>You want us to do</h2>
+              <h2>This is shid bro</h2>
               <!-- checkout formspree.io for easy form setup -->
               <form class="work-request">
                 <div class="work-request--options">
